2006-08-25 [wwp]	0.9.4cvs4

	* src/perl_plugin.c
		fix a potential crash (complete and fix my commit 0.9.4cvs2).

2006-08-24 [colin]	0.9.4cvs3

	* configure.ac
	* src/perl_plugin.c
		Update required version

2006-08-24 [wwp]	0.9.4cvs2

	* src/perl_plugin.c
		updated to reflect recent changes in the way to access some items
		from the MsgInfo data structure.

2006-08-18 [paul]	0.9.4cvs1

	* configure.ac
		bump up GLib and GTK+ minimum required versions,
		following Claws

2006-06-12 [paul]	0.9.4

	0.9.4 released

2006-06-06 [wwp]	0.9.3cvs2

	* configure.ac
	* src/.cvsignore
	* src/Makefile.am
	* src/perl_plugin.c
	* src/plugin_version.h.in
		fix/unify/simplify autostuff, get rid of src/plugin_version.h{,.in} (use pluginconfig.h instead).

2006-06-03 [wwp]	0.9.3cvs1

	* commitHelper
	* PATCHSETS
		introducing commitHelper for plugins too.

2006-05-17 [wwp] 0.9.3

	* src/plugin.c
		Updated sylpheed-claws product name.

	* src/tools/matcherrc2perlfilter.pl
		Updated sylpheed-claws product name (matching this plugin doc).

2006-05-07 [holger]	0.9.2

	* src/perl_plugin.c
		Make sure the filtering hook is not called with
		a NULL message. Fixes possible crasher.
	
2006-04-07 [colin] 	0.9.1

	* configure.ac
		Optionnaly handle --prefix.
		Patch by Pawel Pekala.

2006-03-18 [holger]	0.9

	0.9 released
	
2006-02-25 [holger]     0.8.1

	* src/perl_gtk.c
		Check mainwindow before using it
	* src/perl_plugin.c
		Fix access to "References" header (and a few others)
		Forward and redirect in batch mode
		Remove double plugin version information
		Update required Sylpheed-Claws version
	* sc_perl.pod
		Update documentation
	
2006-02-23 [wwp]	0.8

	* src/perl_plugin.c
		updated to reflect latest changes in compose.c API.
	* ChangeLog
	* configure.ac
		bumped version to 0.8

2006-02-22 [wwp]	0.7

	* src/perl_plugin.c
		fix plugin prefs loading
	* Changelog
	  configure.ac
		bumped version to 0.7

2005-12-15 [paul]	0.6

	* src/perl_plugin.c
		Add plugin_version()
