@@ -1,3 +1,8 @@
+2006-08-27 [colin]	0.9.4cvs5
+
+	* src/perl_plugin.c
+		Implement plugin_provides()
+
 2006-08-25 [wwp]	0.9.4cvs4
 
 	* src/perl_plugin.c
